<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boa Viagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_usuario">Usuário:</string>
    <string name="label_senha">Senha:</string>
    <string name="label_entrar">Entrar</string>
    <string name="desc_logo_do_aplicativo">Logo do Aplicativo</string>
    <string name="desc_novo_gasto">Novo Gasto</string>
    <string name="desc_nova_viagem">Nova Viagem</string>
    <string name="desc_minhas_viagens">Minhas Viagens</string>
    <string name="desc_configuracoes">Configurações</string>
    <string name="title_activity_segunda_tela">Menu</string>
    <string name="title_activity_despesas">Despesas</string>
    <string name="title_activity_cadastro_despesas">Cadastro Despesa</string>
    <string name="novo">Novo</string>
    <string name="excluir">Excluir</string>
    
    <string-array name="categoria_despesas">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
        <string name="salvar">salvar</string>

</resources>
