<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.divus.academia.android.GC2AppBoaViagem.SegundaTelaActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp">

        <ImageView
            android:id="@+id/imgNovoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/desc_novo_gasto"
            android:src="@drawable/novo_gasto" />

        <ImageView
            android:id="@+id/imgNovaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/nova_viagem"
            android:contentDescription="@string/desc_nova_viagem"/>

        <ImageView
            android:id="@+id/imgMinhasViagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgNovoGasto"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/desc_minhas_viagens"
            android:src="@drawable/minhas_viagens" />

        <ImageView
            android:id="@+id/imgConfiguracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/configuracoes"
            android:contentDescription="@string/desc_configuracoes"/>
        
    </RelativeLayout>

</LinearLayout>
